*Empty MediaWiki Message*

--- a/عبدالودود_پښتونځار.mw
+++ b/عبدالودود_پښتونځار.mw
@@ -1,5 +1,13 @@
-----
+== [[پېژندنه:]] ==
+
+
 عبدالودود پښتونځار دملا  شاه محمد زوى او مولوي غلام محمد لمسى دى، چې دلغمان ولايت،د قرغه يو ولسوالۍ د فرمانخېلو په کلي کې پر ١٣٦٠ ل کال زېږېدلى. لومړنۍ زده کړې يې پاکستان ته دکډوالۍ   په دوران د سوابۍ په برکي پنډغالي، منځنۍ زده کړې يې د کوهي زاخېلو په پنډغالي، ثانوي زده کړې يې په اسلام اباد کې ترسره کړيدي. همداشان د ژبې او ادبياتو په برخه کې يې داسلام اباد په بېلا بېلو پوهنيزو مرکزونو کې زده کړې کړيدي.
+
+
+
+
+== [[دندې]] ==
+
 
 دۀ په اسلام اباد کې دکډوالوافغانانو  دروزنې لپاره يو منځنى ښوونځى(غلام سخي منځنى ښوونځى ) د اسلام اباد په کچه ابادۍ  کې پرانستى وو،چې ددغه ښوونځي په برکت له پنځه سوه څخه ډېرو پښتنو ناچارو ماشومانو زده کړې پکې وکړې او د ليک لوست له نعمت ،څخه برخمن شول.
 
@@ -7,13 +15,11 @@
 
 
 
-
-----
+== [[ادبي ټوټي يي:]] ==
 
 دى په پښتو او انګرېزۍ ژبو کې ليکنې کوي. او ځان په ډانګ پېلې تو ګه پښتون نشنلسټ بولي. دى  لنډې ادبي ټوټې هم ليکي، چې يوه يې داده:
 
-څه وايي؟
-
+[[څه وايي؟]]
 څه وايي؟ دساحل په لور روانې چپې، دمازديګرزېړی لمر، دګلونوسپړېدل اورژېدل، دسپرلي راتله اوبېرته تله، دشپې چوپه چوپتيا، دورځې بنډارونه اوغوغا، دسپرلي هرخواګلونه شيندل،دخزان ډاګ اوبېديا، څه وايي؟
 دورځې تېرېدل،دشپې راتلل،دمغروره سيندچپې په ځګونو بدلېدل، له ګلاب نه دمچکو اخستو لپاره دپرخې راتلل اوسهار داغيارله لاسه پناه کېدل،څه وايي؟
 بس ټوله دپيدا، او پناه کيسه ده. دژوند ژوره فلسفه ده. نورهېڅ نه دي.د ژوند داستان دی اوبس!
