[[عبدالودود پښتونځار]] ته وګرځولی شو

--- a/پښتونڅار.mw
+++ b/پښتونڅار.mw
@@ -1,5 +1,1 @@
-عبدالودود پښتونځار د ملا شاه محمد زوى او دمولوي غلام محمد لمسى دۍ، چې دلغمان ولايت،د قرغه يو ولسوالۍ د فرمانخېلو په کلي کې پر ١٣٦٠ ل کال زېدلي. لومړنۍ زده کړې يې دکډوالۍ   په دوران د سوابۍ په برکي پنډغالي، منځنۍ زده کړې يې دازاخېلو په پنډغالي،ثانوي زده کړې يې په اسلام اباد کې ترسره کړيدي. همداشان د ادبياتو او ژبې په برخه کې يې داسلام اباد په بېلا بېلو پوهنيزو مرکزونو کې زده کړې کړيدي. دۀ په اسلام اباد کې دافغانانو دروزنې لپاره يو منځنى ښوونځى(دغلام سخي) په نامه سره  پرانستى وو. چې ددغه ښوونځي په برکت له پنځه سوه څخه ډېرو پښتنو ناچار ماشومانو زده کړې کړي او د ليک لوست له نعمت ،څخه برخمن شويدي.
-
-نوموړى په ٢٠٠٤ ز کال داګسټ په مياشت کې هېواد ته راغلى او اوس مهال دميدان وردګوولايت دمشرتابه دوياند په توګه کار ترسره کوي. همداشان دى دکابل ښاروالۍ د ښاري خدمتونو دمعينيت مطبوعاتي او فرهنګې مسوول هم پاته شوى.
-
-دى په پښتو او انګرېزۍ ژبو ليکنې کوي او ځان په ډانګ پېلې تو ګه پښتون نشنلسټ بولي.
+#REDIRECT [[عبدالودود پښتونځار]]
