--- a/عبدالودود_پښتونځار.mw
+++ b/عبدالودود_پښتونځار.mw
@@ -7,7 +7,7 @@
 
 دۀ په اسلام اباد کې دکډوالوافغانانو  دروزنې لپاره يو منځنى ښوونځى(غلام سخي منځنى ښوونځى ) د اسلام اباد په کچه ابادۍ  کې پرانستى وو،چې ددغه ښوونځي په برکت له پنځه سوه څخه ډېرو پښتنو ناچارو ماشومانو زده کړې پکې وکړې او د ليک لوست له نعمت ،څخه برخمن شول.
 
-نوموړى په ٢٠٠٤ ز کال داګسټ په مياشت کې له اسلام اباد نه افغانستان ته راغلى او اوس مهال دوردګ-ميدان ولايت د والي وياند دى. همداشان دى دکابل ښاروالۍ د ښاري خدمتونو دمعينيت مطبوعاتي او فرهنګې مسوول هم پاته شوى.
+نوموړى په ٢٠٠٤ ز کال داګسټ په مياشت کې له اسلام اباد نه افغانستان ته راغلى او اوس مهال دوردګ-ميدان ولايت د والي وياند دى. همداشان دى دکابل ښاروالۍ د ښاري خدمتونو دمعينيت مطبوعاتي او فرهنګې مسوول هم پاته شوى.دۀ په   ميدان - وردګو كې د ځينو ملحوظاتو پر اساس ويندوي پرېښوده او يو ځل بېرته ښاروالۍ ته راغى او په ښاروالۍ كې د ښاري خدمتونو د معين سكرټر شو خو هغه دنده يې هم له دې امله چې خپل فرهنګي كارونو ته نه وزګارېده، پرېښوده او يو ځل يې خپل ځان له دولت نه راوكيښ او په خپلو ليكنيو چارو اخته دى. 
 
 == [[ادبي ټوټي يي:]] ==
 
