--- a/عبدالودود_پښتونځار.mw
+++ b/عبدالودود_پښتونځار.mw
@@ -1,16 +1,18 @@
-[[پېژندنه:]]
+== [[پېژندنه:]] ==
 ----
 
 عبدالودود پښتونځار دملا  شاه محمد زوى او مولوي غلام محمد لمسى دى، چې دلغمان ولايت،د قرغه يو ولسوالۍ د فرمانخېلو په کلي کې پر ١٣٦٠ ل کال زېږېدلى. لومړنۍ زده کړې يې پاکستان ته دکډوالۍ   په دوران د سوابۍ په برکي پنډغالي، منځنۍ زده کړې يې د کوهي زاخېلو په پنډغالي، ثانوي زده کړې يې په اسلام اباد کې ترسره کړيدي. همداشان د ژبې او ادبياتو په برخه کې يې داسلام اباد په بېلا بېلو پوهنيزو مرکزونو کې زده کړې کړيدي.
 
-[[دندې]]
+
+== [[دندې]] ==
 ----
 
 دۀ په اسلام اباد کې دکډوالوافغانانو  دروزنې لپاره يو منځنى ښوونځى(غلام سخي منځنى ښوونځى ) د اسلام اباد په کچه ابادۍ  کې پرانستى وو،چې ددغه ښوونځي په برکت له پنځه سوه څخه ډېرو پښتنو ناچارو ماشومانو زده کړې پکې وکړې او د ليک لوست له نعمت ،څخه برخمن شول.
 
 نوموړى په ٢٠٠٤ ز کال داګسټ په مياشت کې له اسلام اباد نه افغانستان ته راغلى او اوس مهال دوردګ-ميدان ولايت د والي وياند دى. همداشان دى دکابل ښاروالۍ د ښاري خدمتونو دمعينيت مطبوعاتي او فرهنګې مسوول هم پاته شوى.دۀ په   ميدان - وردګو كې د ځينو ملحوظاتو پر اساس ويندوي پرېښوده او يو ځل بېرته ښاروالۍ ته راغى او په ښاروالۍ كې د ښاري خدمتونو د معين سكرټر شو خو هغه دنده يې هم له دې امله چې خپل فرهنګي كارونو ته نه وزګارېده، پرېښوده او يو ځل يې خپل ځان له دولت نه راوكيښ او په خپلو ليكنيو چارو اخته دى. 
 
-[[ادبي ټوټي يي:]]
+
+== [[ادبي ټوټي يي:]] ==
 ----
 
 دى په پښتو او انګرېزۍ ژبو کې ليکنې کوي. او ځان په ډانګ پېلې تو ګه پښتون نشنلسټ بولي. دى  لنډې ادبي ټوټې هم ليکي، چې يوه يې داده:
@@ -21,7 +23,8 @@
 دورځې تېرېدل،دشپې راتلل،دمغروره سيندچپې په ځګونو بدلېدل، له ګلاب نه دمچکو اخستو لپاره دپرخې راتلل اوسهار داغيارله لاسه پناه کېدل،څه وايي؟
 بس ټوله دپيدا، او پناه کيسه ده. دژوند ژوره فلسفه ده. نورهېڅ نه دي.د ژوند داستان دی اوبس!
 
-[[چاپ  او نا چاپ اثار يې:]]
+
+== [[چاپ  او نا چاپ اثار يې:]] ==
 ----
 
 ۱- اتمه مڼې ګل ( د اتمې مڼې ګل مېلې دراپورونو او شعرونو ټولګه  ده چې د مڼې په اړه پكې پوره څېړنه شوېده. (چاپ اثر)
