--- a/عبدالودود_پښتونځار.mw
+++ b/عبدالودود_پښتونځار.mw
@@ -1,10 +1,11 @@
-[[پېژندنه:]]
+== [[پېژندنه:]] ==
 ----
 
 عبدالودود پښتونځار دملا  شاه محمد زوى او مولوي غلام محمد لمسى دى، چې دلغمان ولايت،د قرغه يو ولسوالۍ د فرمانخېلو په کلي کې پر ١٣٦٠ ل کال زېږېدلى. لومړنۍ زده کړې يې پاکستان ته دکډوالۍ   په دوران د سوابۍ په برکي پنډغالي، منځنۍ زده کړې يې د کوهي زاخېلو په پنډغالي، ثانوي زده کړې يې په اسلام اباد کې ترسره کړيدي. همداشان د ژبې او ادبياتو په برخه کې يې داسلام اباد په بېلا بېلو پوهنيزو مرکزونو کې زده کړې کړيدي.
 
 
-[[دندې:]]
+
+== [[دندې:]] ==
 ----
 
 دۀ په اسلام اباد کې دکډوالوافغانانو  دروزنې لپاره يو منځنى ښوونځى(غلام سخي منځنى ښوونځى ) د اسلام اباد په کچه ابادۍ  کې پرانستى وو،چې ددغه ښوونځي په برکت له پنځه سوه څخه ډېرو پښتنو ناچارو ماشومانو زده کړې پکې وکړې او د ليک لوست له نعمت ،څخه برخمن شول.
@@ -12,7 +13,8 @@
 نوموړى په ٢٠٠٤ ز کال داګسټ په مياشت کې له اسلام اباد نه افغانستان ته راغلى او اوس مهال دوردګ-ميدان ولايت د والي وياند دى. همداشان دى دکابل ښاروالۍ د ښاري خدمتونو دمعينيت مطبوعاتي او فرهنګې مسوول هم پاته شوى.دۀ په   ميدان - وردګو كې د ځينو ملحوظاتو پر اساس ويندوي پرېښوده او يو ځل بېرته ښاروالۍ ته راغى او په ښاروالۍ كې د ښاري خدمتونو د معين سكرټر شو خو هغه دنده يې هم له دې امله چې خپل فرهنګي كارونو ته نه وزګارېده، پرېښوده او يو ځل يې خپل ځان له دولت نه راوكيښ او په خپلو ليكنيو چارو اخته دى. 
 
 
-[[ادبي ټوټي:]]
+
+== [[ادبي ټوټي:]] ==
 ----
 
 دى په پښتو او انګرېزۍ ژبو کې ليکنې کوي. او ځان په ډانګ پېلې تو ګه پښتون نشنلسټ بولي. دى  لنډې ادبي ټوټې هم ليکي، چې يوه يې داده:
@@ -27,7 +29,8 @@
 تاسې باور وکړئ، زارۍ مې ډېرې ورته وکړې. دسليمان عليه السلا م قسم مې ور واچاؤ. هان چې د ډېرو زاريو نه مې سترګې له اوښکو ډکې شوې.خو دې راته هماغسې کتل او زاريو پرې هيڅ اثر نه کاؤ. له ناکامه پاسېدم. سوړ اسويلى مې له خولې ووت او له ځان سره مې وويل، چې دا انسان څومره بې اعتماده دى چې حيوانات يې هم پر مينه،زاريواو ننواتو باور نشي کولاى!
 
 
-[[چاپ  او نا چاپ اثار:]]
+
+== [[چاپ  او نا چاپ اثار:]] ==
 ----
 
 ۱- اتمه مڼې ګل ( د اتمې مڼې ګل مېلې دراپورونو او شعرونو ټولګه  ده چې د مڼې په اړه پكې پوره څېړنه شوېده. (چاپ اثر)
@@ -44,7 +47,8 @@
 
 ۷- وردګ د تاريخ په اوږدو كې (ناچاپ)
 
-[[باندنې تړنې:]]
+
+== [[باندنې تړنې:]] ==
 ----
 
 http://www.pashtoonzar.blogfa.com
