*Empty MediaWiki Message*

--- a/عبدالودود_پښتونځار.mw
+++ b/عبدالودود_پښتونځار.mw
@@ -1,5 +1,4 @@
-== [[پېژندنه:]] ==
-----
+{{delete}}
 
 عبدالودود پښتونځار دملا  شاه محمد زوى او مولوي غلام محمد لمسى دى، چې دلغمان ولايت،د قرغه يو ولسوالۍ د فرمانخېلو په کلي کې پر ١٣٦٠ ل کال زېږېدلى. لومړنۍ زده کړې يې پاکستان ته دکډوالۍ   په دوران د سوابۍ په برکي پنډغالي، منځنۍ زده کړې يې د کوهي زاخېلو په پنډغالي، ثانوي زده کړې يې په اسلام اباد کې ترسره کړيدي. همداشان د ژبې او ادبياتو په برخه کې يې داسلام اباد په بېلا بېلو پوهنيزو مرکزونو کې زده کړې کړيدي.
 
