robot  Modifying: [[nah:Nepallān]]

--- a/نیپال.mw
+++ b/نیپال.mw
@@ -325,7 +325,7 @@ Most houses in rural Nepal are made up of a tight bamboo framework with mud and 
 [[mn:Балба]]
 [[mr:नेपाळ]]
 [[ms:Nepal]]
-[[nah:Nepal]]
+[[nah:Nepallān]]
 [[nds:Nepal]]
 [[ne:नेपाल]]
 [[new:नेपाः]]
