robot  Adding: [[szl:Lajyra]]

--- a/موسیقي.mw
+++ b/موسیقي.mw
@@ -361,6 +361,7 @@ Harwood, Dane (1976). "Universals in Music: A Perspective from Cognitive Psychol
 [[st:Mmino]]
 [[sv:Musik]]
 [[sw:Muziki]]
+[[szl:Lajyra]]
 [[ta:இசை]]
 [[te:భారతీయ సంగీతము]]
 [[tg:Мусиқӣ]]
