--- a/پرتګال.mw
+++ b/پرتګال.mw
@@ -412,6 +412,7 @@ Saint Anthony is celebrated on the [[June 13|13th]], mainly in Lisbon and Saint 
 <!--Please do not remove this article from the top of its own category-->
 {{Link FA|de}}
 {{Link FA|is}}
+{{Link FA|pt}}
 {{Link FA|vi}}
 
 [[Category:پرتګال| ا]]
