--- a/مکه_معظمه.mw
+++ b/مکه_معظمه.mw
@@ -81,6 +81,7 @@
 [[id:Provinsi Makkah]]
 [[it:Makkah]]
 [[lt:Mekos emyratas]]
+[[mk:Мека (провинција)]]
 [[nl:Mekka (provincie)]]
 [[pam:Makkah]]
 [[pl:Mekka (prowincja)]]
