robot  Adding: [[szl:Sierra Leone]]

--- a/سیرالیون.mw
+++ b/سیرالیون.mw
@@ -278,6 +278,7 @@ Sierra Leone is the worst nation in the world for [[childbirth]], having the hig
 [[su:Sierra Leone]]
 [[sv:Sierra Leone]]
 [[sw:Sierra Leone]]
+[[szl:Sierra Leone]]
 [[ta:சியேரா லியோனி]]
 [[tg:Сиерра Леоне]]
 [[th:ประเทศเซียร์ราลีโอน]]
