--- a/تاجيکستان.mw
+++ b/تاجيکستان.mw
@@ -161,6 +161,7 @@
 [[sr:Таџикистан]]
 [[sv:Tadzjikistan]]
 [[sw:Tajikistan]]
+[[szl:Tadžykistan]]
 [[ta:தஜிகிஸ்தான்]]
 [[te:తజికిస్తాన్]]
 [[tg:Тоҷикистон]]
