--- a/لېو_نيكولايوويچ_تولستوى.mw
+++ b/لېو_نيكولايوويچ_تولستوى.mw
@@ -1,6 +1,6 @@
-لېو نيكولايوويچ تولستوى
+'''لېو نيكولايوويچ تولستوى'''
 
-د روسيې لوى او نامتو كلاسيك ليكوال (( لېو نيكولايووچ تولستوى )) د ۱۸۲۸ ز كال د اگست په ۲۸ نېټه د روسيې د (( تولا )) ايالت د (( ياسنايا پليانا )) په سيمه كې زېږېدلى دى . دى له روسي اريستوكراتانو څخه وو . د مور له پلوه يې له لوى او نامتو روسي شاعر (( پوشكين )) سره لرې خپلوې لرله . تولستوى درې وروڼه (( نيكولاى )) ، (( سيرگى )) ، (( دميتري )) او يوه خور (( مارييا )) لرل . 
+د روسيې لوى او نامتو كلاسيك ليكوال (( لېو نيكولايووچ تولستوى )) د [[۱۸۲۸]] ز كال د اگست په ۲۸ نېټه د روسيې د (( تولا )) ايالت د (( ياسنايا پليانا )) په سيمه كې زېږېدلى دى . دى له روسي اريستوكراتانو څخه وو . د مور له پلوه يې له لوى او نامتو روسي شاعر (( پوشكين )) سره لرې خپلوې لرله . تولستوى درې وروڼه (( نيكولاى )) ، (( سيرگى )) ، (( دميتري )) او يوه خور (( مارييا )) لرل . 
 تولستوى په شاړس كلنۍ كې دپيلوماتيكه څانگه غوره كړه او د كازان پوهنتون د ختيځ پوهنځي د عربي او توركي ژبو په څانگه كې شامل شو . څه موده وروسته يې دغه پوهنځى پرېښود او د حقوقو په پوهنځي كې شامل شو او په پوهنتون كې يې زده كړو درې كاله دوام وكړ . د ځوانۍ پر مهال يې د فرانسي فيلسوف ليكوال ((ژان ژاك روسو )) د اثارو له لوست سره ډېره مينه درلوده ، ان تر دې چې په ۱۸۵۷ ز كال كې له هېواد نه بهر ته په سفر ولاړ او د سفر په ترڅ كې يې هغه ځايونه هم وكتل چې (( روسو )) پكې كوم وخت اوسېدلى او يا يې پكې كار كړى وو . په پاريس كې يې له بل نامتو روسي ليكوال (( تورگېنيف )) سره هم وكتل .
 په راتلونكي لنډمهال كې تولستوى پوهنتون خوشي كړ او (( ياسنايا پليانا )) ته ولاړ . ده ته د خپلو مور او پلار له خوا دومره جايداد او شتمني په ميراث پاتې وو چې ۷۰۰ كسانو بزگرانو او مزدورانو پكې د مرييانو په بڼه كار كاوه . څه موده يې په ياسنايا پليانان كې تېر كړ او بېرته ماسكو ته ستون شو . 
 د څه وخت په تېرېدو سره دده مشر ورور (( نيكولاى )) چې د توپچي افسر وو ، دى له ځان سره قفقاز ته بوت . په قفقاز كې تولستوى لومړى پخپله خوښه او وروسته د افسر په توگه د غرنيو قفقازي وگړو پر وړاندې پوځي عملياتو كې گډون وكړ . تولستوى په قفقاز كې په جدي ډول په ادبياتو بوخت شو او د يوه داسې رومان په ليكلو يې پيل وكړ چې څلور برخې يې درلودې : (( كوشنيتو ب )) ، (( هلكتوب )) ، (( زلميتوب )) او (( ځواني )) چې وروستۍ برخه يې ونه ليكل شوه . هممهال يې د (( يرغل )) ، (( د شتمن گهيځ )) ، (( كازاكان )) او ځينې نور داستانونه او ناولونه وليكل . د قفقاز خاطرو يې په داسې داستانونو كې غبرگون موندلى لكه (( د ځنگله وهل )) ، (( رازژالوواننيې )) ، او د (( كازاكانو )) ناول . د ژوند په پاى كې تولستوى يو ځل بيا د قفقاز موضوع ته پام اړوي او خپل ډېر ځلانده ناول (( حاجي مراد )) ليكي . 
@@ -10,3 +10,5 @@
 
 ژباړن : اوڅار افغان
 سرچينه : سل ستر ليكوال ، ۲۰۰۰ ز كال ماسكو چاپ ، ۳۱۶ – ۳۲۶ مخونه .
+
+[[fr:Léon Tolstoï]]
