robot  Modifying: [[fa:جین (دين)]]

--- a/جاينيزم.mw
+++ b/جاينيزم.mw
@@ -351,7 +351,7 @@ Even though Jainism is of Indian origin, it shared some principles with the Hell
 [[eo:Ĝajnismo]]
 [[es:Jainismo]]
 [[et:Džainism]]
-[[fa:آئین جین]]
+[[fa:جین (دين)]]
 [[fi:Jainalaisuus]]
 [[fr:Jaïnisme]]
 [[frp:J·ayinismo]]
