robot  Adding: [[ko:고르기아스]]

--- a/گورجېس.mw
+++ b/گورجېس.mw
@@ -123,6 +123,7 @@ Aristotle also criticizes Gorgias, labeling him as a mere Sophist whose primary 
 [[is:Gorgías]]
 [[it:Gorgia]]
 [[ja:ゴルギアス]]
+[[ko:고르기아스]]
 [[la:Gorgias]]
 [[mk:Горгија]]
 [[nl:Gorgias]]
