*Empty MediaWiki Message*

--- a/هرات_ولايت.mw
+++ b/هرات_ولايت.mw
@@ -8,7 +8,7 @@
 |د وګړو شمېر = 1,182,000 [http://www.statoids.com/uaf.html]
 |مساحت = 54,778
 |ګڼه ګونه= 
-|ژبې= [[پښتو]]
+|ژبې= [[فارسي]]
 }}
  	 
 '''د هرات ولايت''' د افغانستان په لوېديځ كې پروت دى، چې د بحر له كچې څخه ۹۳۳متره لوړ پروت دى. 
