--- a/سلېمان_لايق.mw
+++ b/سلېمان_لايق.mw
@@ -18,7 +18,7 @@
 انځور:SelaimanLayeq05.PNG|سلېمان لايق
 انځور:SelaimanLayeq.PNG|سلېمان لايق
 انځور:SelaimanLayeq01.PNG|سلېمان لايق
-انځور:SulemanLayeq.PNG|سلېمان لاي
+انځور:SulemanLayeq.PNG|سلېمان لايق
 </gallery>
 
 == باندنۍ تړنې ==
