--- a/لېو_نيكولايوويچ_تولستوى.mw
+++ b/لېو_نيكولايوويچ_تولستوى.mw
@@ -11,6 +11,8 @@
 ژباړن : اوڅار افغان
 سرچينه : سل ستر ليكوال ، ۲۰۰۰ ز كال ماسكو چاپ ، ۳۱۶ – ۳۲۶ مخونه .
 
+[[وېشنيزه:روسيه]]
+
 [[am:ሊዮ ቶልስቶይ]]
 [[ar:ليو تولستوي]]
 [[az:Lev Tolstoy]]
