--- a/آسيا.mw
+++ b/آسيا.mw
@@ -4,7 +4,7 @@
 
 = Asie
 
-[[افغانستان]], [[ايران]], [[ترکمنستان]], [[قزاقستان]], [[چين]], [[جاپان]], [[پاکستان]], [[هندوستان]], [[تاجکستان]], [[قرغزستان]], [[ازبکستان]]
+[[افغانستان]], [[ايران]], [[ترکمنستان]], [[قزاقستان]], [[چين]], [[جاپان]], [[پاکستان]], [[هندوستان]], [[تاجکستان]], [[قرغزستان]], [[ازبکستان]], [[روسيه]]
 
 [[Category:جغرافيه]]
 [[Category:آسيا]]
