robot  Modifying: [[fr:Jamal-al-Din Afghani]]

--- a/سيد_جمال_الدين_افغاني.mw
+++ b/سيد_جمال_الدين_افغاني.mw
@@ -124,7 +124,7 @@
 [[en:Jamal-al-Din Afghani]]
 [[fa:سید جمال الدین اسدآبادی]]
 [[fi:Jamal al-din al-Afghani]]
-[[fr:Jamal Al Dîn Asadabadi]]
+[[fr:Jamal-al-Din Afghani]]
 [[he:ג'מאל א-דין אל-אפגאני]]
 [[it:Jamal al-Din al-Afghani]]
 [[ja:ジャマールッディーン・アフガーニー]]
