--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -32,15 +32,15 @@
 
 ==زوكړه يې == 
 
-اتفق الباحثون على مكان ولادة ووفاة الشهرستاني ولكنهم اختلفوا في زمانها ، وإن كان الخلاف في الولادة أقوى من الاختلاف في الوفاة ، ولكنهم اتفقوا على أنه ولد في مدينة شهرستان .
+زياتره څۍړونكي د شهرستاني د زوكړې په ځاى او مړينې په كال كې سره يوه خوله دي، خو دده د زوكړې په نيټۀ كې بيا اختلاف ليدل كېږي. دوي پدې سره سلا كړې، چۍ شهرستاي د شهرستان په ښارګوټي كۍ زېږۍدلۍ دي.
 
-واختلف [[عالم|العلماء]] في السنة التي ولد فيها أبو الفتح الشهرستاني على أقوال : 
+مګر دده د زوكړۍ په كال كې بيا سره بډوالى (اختلاف) په لاندې ډول تر سترګو كېږي:
 
-1 - سنة [[476]] ه.
+1 - لومړې [[476]] هجري سپوږميز كال.
 
-2 - سنة [[469]] ه. 
+2 - دويم [[469]] هجري سپوږميز كال. 
 
-3 - سنة [[479]]ه.
+3 - درېيم [[479]]هجري سپوږميز كال.
 
 == وفاته == 
 
