--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -163,13 +163,15 @@
 
 وغيرها كثير من الكتب التي تكلمت عن هذا العالم الكبير .
 
-== المصادر ==
+== سرچينې==
 
-- كتاب ( منهج الشهرستاني في كتابه [[الملل والنحل]] ) للأستاذ محمد بن ناصر السحيباني .
+- د ( منهج الشهرستاني في كتابه [[الملل والنحل]] ) كتاب، ليكوال: استاذ محمد بن ناصر السحيباني .
 
-[[تصنيف:أشاعرة]]
-[[تصنيف:شافعية]]
-[[تصنيف:رجال دين سنة]]
+[[category:اشاعره]]
+[[category:شافعيان]]
+[[category:فلسفه]]
+[[category:مسلمان فيلسوفان]]
+[[category:ختيځ فيلسوفان]]
 
 [[en:Al-Shahrastani]]
 [[es:Al-Shahrastani]]
