/* من مصادر ترجمته */

--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -141,7 +141,7 @@
 
 == من مصادر ترجمته ==
 
-هناك الكثير من العلماء المتأخرين والمتقدمين من ترجم للشهرستاني ويمكن الاستفادة منه ، ومن هذه المصادر :
+ډۍرې پخواني او اوسني څېړونكي شته، چې د علامه شهرستاني له ليكنو څخه يې ګټه اخيستې، او دده په اړه يې هم ليكنې كړي، دا سرچينې په لاندې ډول دي:
 
 - [[معجم البلدان]] [[ياقوت الحموي|لياقوت الحموي]] . 
 
@@ -161,7 +161,7 @@
 
 - [[دائرة المعارف الإسلامية]] .
 
-وغيرها كثير من الكتب التي تكلمت عن هذا العالم الكبير .
+او داسې نور ډېر كتابونه چې ددې ستر عالم په اړه ليكل شوې دي.
 
 == سرچينې==
 
