--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -42,12 +42,11 @@
 
 3 - درېيم [[479]]هجري سپوږميز كال.
 
-== وفاته == 
+== مړينه== 
 
-اتفق الباحثون على مكان وفاته وهو بلدة شهرستان أيضاًَ ، ولكن اختلفوا في سنة وفاته ، والأرجح أنها سنة [[548]] م .
+څۍړونكي د شهرستاني د وفات په ځاى كې يوه خوله دي، چې هغه شهرستان دى، خو د مړينې كال يې بيا شكمن دى، خو له دې سره سره بيا هم [[548]] ز كال ښودل كېږي. 
 
-
-هذه التواريخ غير معقولة. تحتاج إلى مراجعة
+دا نيټې معقولې ندي، بيا كتنې ته اړتيا لري.
 
 == نشأته العلمية == 
 
