--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -48,9 +48,9 @@
 
 دا نيټې معقولې ندي، بيا كتنې ته اړتيا لري.
 
-== نشأته العلمية == 
+== علمي پرمختګ == 
 
-توجه الشهرستاني إلى طلب العلم وهو صغير السن ، وكان أول توجهه لطلب العلم كان نحو [[علوم إسلامية|العلوم الشرعية]] [[قرآن|القرآن]] و[[تفسير|تفسيره]] و[[حديث نبوي|الحديث]] و[[فقه|الفقه]] ، فكان أول ما تلقاه هو القرآن وتفسيره ، وسمع الحديث وهو في سن الخامسة عشرة من [[أبو الحسن المديني|أبي الحسن المديني]] [[نيسابور|بنيسابور]] خارج بلده شهرستان .
+شهرستاني په كوچنيوالي كې د زده كړې ترلاسه كولو ته مخه كړې وه، او په لومړي ځل لپاره يې د كور كلي دود و دوستور سره سم شرعي علومو زده كړې ته مخه كړه. [[قرآن كريم|القرآن]]، [[تفسير|تفسيره]]، [[حديث نبوي|الحديث]]، [[فقه|الفقه]] او داسې نور علوم يې ترلاسه كړل.
 
 == صفاته وأخلاقه == 
 
