--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -64,9 +64,10 @@
 
 كان الشهرستاني مقبولاً أيضاً عند [[سلطان|السلاطين]] و[[والي|الولاة]] و[[وزير|الوزراء]] و[[وجيه|الوجهاء]] ، فقد كان مقرباً لدى السلطان [[سنجر بن ملكشاه]] ، وكان مقرباً من الوزير [[أبو القاسم المروزي|أبو القاسم محمود بن المظفر المروزي]] .
 
-==مكانته العلمية ==
+==علمي منزلت ==
 
-كان مكانة الشهرستاني كبيرة عند العلماء فقد لقبوه بعدة ألقاب منها : [[فقيه|الفقيه]] - [[متكلم|المتكلم]] - [[أصولي|الأصولي]] - [[محدث|المحدث]] - [[مفسر|المفسر]] - [[رياضي|الرياضي]] - [[فيلسوف|الفيلسوف]] - صاحب [[تصنيف|التصانيف]] ، وقد أطلق عليه الحافظ [[الذهبي]] لقب ( [[عالم|العلامة]] ) .
+علامه شهرستاني د يوه ستر علمي منزلت څښتن و، د وخت نامتو دينپوهانو په ښكلو او له مانا څخه ډكو لقبونو باندې نازولې و، چې موږ به يې يو څۀ په لاندې توګه يادونه وكړو:
+: [[فقيه|الفقيه]] - [[متكلم|المتكلم]] - [[أصولي|الأصولي]] - [[محدث|المحدث]] - [[مفسر|المفسر]] - [[رياضي|الرياضي]] - [[فيلسوف|الفيلسوف]] - صاحب [[تصنيف|التصانيف]] ، او حافظ [[الذهبي]] په( [[عالم|العلامة]] ) باندې ونوماوه.
 
 == اللغات التي كان يتقنها ==
 
