/* العلماء الذي أخذ عنهم العلم */

--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -75,17 +75,20 @@
 
 رحل الشهرستاني في طلب العلم وهو في سن الخامسة عشرة إلى بلاد كثيرة منها : مدن [[خراسان]] و[[خوارزم]] و[[مكة المكرمة]] و[[بغداد]] .
 
-== العلماء الذي أخذ عنهم العلم ==
+== هغه پوهان چې علامه ورڅخه زده كړې وكړې ==
 
-طلب الشهرستاني العلم على يد كثير من العلماء منهم : 
 
-1 - [[أبو القاسم الأنصاري]] : أخذ عنه التفسير وعلم الكلام .
+علامه شهرستاني د وخت له نامتو پوهانوڅخه زده كړې ترلاسه كړې چې په لاندې توګه يې د ځينو نومونوه راوړو:
+ 
 
-2 - [[أبو الحسن المديني]] : أخذ عنه الحديث . 
+# - [[أبو القاسم الأنصاري]] : له دې عالم څخه يې تفسير او د كلام علم ترلاسه كړ.
 
-3 - [[أبو المظفر الخوافي]] : أخذ عنه الفقه .
+# - [[أبو الحسن المديني]] : لدې عالم څخه يې نبوي حديث ترلاسه كړل.
+ 
 
-4 - [[أبو نصر القشيري]] : أخذ عنه الفقه والأصول وعلم الكلام  . 
+# - [[أبو المظفر الخوافي]] : لدې عالم څخه فقه ترلاسه كړه.
+
+# - [[أبو نصر القشيري]] : لدې عالم څخه يې فقه او اصول فقه او د كلام علم ترلاسه كړ.
 
 == تلامذته ==
 
