*Empty MediaWiki Message*

--- a/ابو_الفتح_الشهرستاني.mw
+++ b/ابو_الفتح_الشهرستاني.mw
@@ -168,12 +168,13 @@
 
 - د ( منهج الشهرستاني في كتابه [[الملل والنحل]] ) كتاب، ليكوال: استاذ محمد بن ناصر السحيباني .
 
-[[category:اشاعره]]
-[[category:شافعيان]]
-[[category:فلسفه]]
-[[category:مسلمان فيلسوفان]]
-[[category:ختيځ فيلسوفان]]
+[[وېشنيزه:اشاعره]]
+[[وېشنيزه:شافعيان]]
+[[وېشنيزه:فلسفه]]
+[[وېشنيزه:مسلمان فيلسوفان]]
+[[وېشنيزه:ختيځ فيلسوفان]]
 
+[[ar:أبو الفتح الشهرستاني]]
 [[en:Al-Shahrastani]]
 [[es:Al-Shahrastani]]
 [[fr:Muhammad al-Shahrastani]]
