robot  Adding: [[se:Honduras]]

--- a/هندوراس.mw
+++ b/هندوراس.mw
@@ -331,6 +331,7 @@ Soccer is the most popular sport in Honduras. In the following articles you'll f
 [[ru:Гондурас]]
 [[sa:हांडूरस]]
 [[scn:Honduras]]
+[[se:Honduras]]
 [[sh:Honduras]]
 [[simple:Honduras]]
 [[sk:Honduras]]
