robot  Modifying: [[eu:Hugo Chávez]]

--- a/هوگو_چاوز.mw
+++ b/هوگو_چاوز.mw
@@ -1245,7 +1245,7 @@ Chávez is of [[Roman Catholic Church|Roman Catholic]] extraction, and is curren
 [[eo:Hugo Chávez]]
 [[es:Hugo Chávez]]
 [[et:Hugo Chávez]]
-[[eu:Hugo Chavez]]
+[[eu:Hugo Chávez]]
 [[fa:هوگو چاوز]]
 [[fi:Hugo Chávez]]
 [[fr:Hugo Chávez]]
