robot  Adding: [[kv:Конституция]]

--- a/اساسي_قانون.mw
+++ b/اساسي_قانون.mw
@@ -233,6 +233,7 @@ The [[Massachusetts|Commonwealth of Massachusetts]] adopted its constitution in 
 [[kn:ಸಂವಿಧಾನ]]
 [[ko:헌법]]
 [[ku:Hîmqanûn]]
+[[kv:Конституция]]
 [[li:Grondwet]]
 [[lt:Konstitucija]]
 [[lv:Konstitūcija]]
