robot  Adding: [[os:Пысылмон дин]]

--- a/اسلام.mw
+++ b/اسلام.mw
@@ -906,6 +906,7 @@ Islamic law divides non-Muslims into several categories, depending on their rela
 [[nov:Islam]]
 [[nrm:Islam]]
 [[oc:Islam]]
+[[os:Пысылмон дин]]
 [[pdc:Islaam]]
 [[pl:Islam]]
 [[pt:Islão]]
