robot  Adding: [[os:Физикæ]]

--- a/فزیک.mw
+++ b/فزیک.mw
@@ -366,6 +366,7 @@ Although much progress has been made in high-energy, quantum, and astronomical p
 [[nov:Fisike]]
 [[nrm:Phŷsique]]
 [[oc:Fisica]]
+[[os:Физикæ]]
 [[pl:Fizyka]]
 [[pms:Fìsica]]
 [[pt:Física]]
