robot  Adding: [[ku:Josef Stalin]]

--- a/جوزف_سټالين.mw
+++ b/جوزف_سټالين.mw
@@ -699,6 +699,7 @@ Russian playwriter and historian Edward Radzinski argues in his book '''Stalin''
 [[kaa:Yosif Stalin]]
 [[kk:Сталин, Иосиф Виссарионович]]
 [[ko:이오시프 스탈린]]
+[[ku:Josef Stalin]]
 [[la:Iosephus Stalin]]
 [[lb:Josef Stalin]]
 [[li:Jozef Stalin]]
