robot  Adding: [[sah:Ыарыы]]

--- a/ناروغي.mw
+++ b/ناروغي.mw
@@ -135,6 +135,7 @@ A disease can also be caused by repeated high anger or stress.
 [[qu:Unquy]]
 [[ro:Boală]]
 [[ru:Болезнь]]
+[[sah:Ыарыы]]
 [[scn:Affizzioni]]
 [[simple:Disease]]
 [[sk:Choroba]]
