--- a/اسرائيل.mw
+++ b/اسرائيل.mw
@@ -502,6 +502,7 @@ Among [[Israeli Arabs|Arab Israelis]], 82.6% were Muslim, 8.8% were [[Christian]
 [[nah:Israel]]
 [[nap:Israele]]
 [[nds:Israel]]
+[[nds-nl:Israël]]
 [[nl:Israël]]
 [[nn:Israel]]
 [[no:Israel]]
