The file [[:Image:Coat_of_Arms_of_the_Philippines.svg]] has been removed, as it has been deleted by [[:commons:User:MichaelMaggs]]: ''per [[commons:Commons:Deletion_requests/Image:Coat_of_Arms_of_the_Philippines.svg]]''. ''[[m:User:CommonsDelinker|Tr

--- a/فلیپین.mw
+++ b/فلیپین.mw
@@ -3,7 +3,7 @@
 |اوږداودوديز نوم      = Republic of the Philippines
 |ټولګړی نوم = فلپاين
 |image_flag                  = Flag of the Philippines.svg
-|image_coat                  = Coat_of_Arms_of_the_Philippines.svg
+|image_coat                  =
 |national_motto              = ''Maka-Diyos, Makatao, Makakalikasan, at Makabansa''<br><small>([[English language|English]]: "For God, People, Nature, and Country")</small> 
 |image_map                   = LocationPhilippines.png
 |national_anthem             = ''[[Lupang Hinirang]]'' <br><small>"Chosen Land"</small> 
