*Empty MediaWiki Message*

--- a/بدخشان_ولايت.mw
+++ b/بدخشان_ولايت.mw
@@ -9,7 +9,7 @@
 |د وګړو شمېر = 715,000 [http://www.statoids.com/uaf.html]
 |مساحت = 44,059  
 |ګڼه ګونه= 
-|ژبې= [[دري]]  
+|ژبې= [[فارسی دري]]  
 }} 
 
 [[انځور:Badakhshan.PNG|thumb|289px|شمال|بدخشان]]
