*Empty MediaWiki Message*

--- a/عيسی.mw
+++ b/عيسی.mw
@@ -1,7 +1,7 @@
 عيسۍ عليه السلام د اسلام له جليل القدره پيغمبران له ډلې څخه ګڼل کېږي. دا پيغمبر د اسرايلو لپاره رالېږل شوې و.
 
 [[وېشنيزه:عيسويت]]
-
+{{Link FA|pt}}
 [[af:Jesus van Nasaret]]
 [[am:ኢየሱስ]]
 [[an:Chesús de Nazaret]]
