--- a/ډي_آکسي_رايبونيوکليک_اسيد.mw
+++ b/ډي_آکسي_رايبونيوکليک_اسيد.mw
@@ -253,7 +253,7 @@ In an influential presentation in 1957, Crick laid out the "[[Central Dogma]]", 
 {{Link FA|de}}
 {{link FA|nl}}
 {{Link FA|nl}}
-
+{{Link FA|pt}}
 <!--Interwiki-->
 
 {{Link FA|ru}}
