The file [[:Image:8403452_36f7580a25_o.jpg]] has been replaced by [[:Image:Initiation_ritual_of_boys_in_Malawi.jpg]] by administrator [[:commons:User:Cecil]]: ''Was in category "Duplicate", exact duplicate''. ''[[m:User:CommonsDelinker|Translate me!]

--- a/مالاوي.mw
+++ b/مالاوي.mw
@@ -182,7 +182,7 @@ The Chewas constitute 90% of the population of the central region; the Nyanja tr
 [[Europe]]ans and [[Asia]]ns also live here. Most Europeans are [[United Kingdom|British]] and [[Portuguese people|Portuguese]] from Mozambique, and Asians are mostly [[India]]ns.
 
 ==Culture==
-[[Image:8403452 36f7580a25 o.jpg|thumb|right|An initiation ritual in Malawi]]
+[[Image:Initiation_ritual_of_boys_in_Malawi.jpg|thumb|right|An initiation ritual in Malawi]]
 ''Main article: [[Culture of Malawi]]''
 
 *[[African Baptist Assembly of Malawi, Inc.|African Baptist Assembly of Malawi]]
