--- a/جلالکوټ.mw
+++ b/جلالکوټ.mw
@@ -33,7 +33,7 @@
 </div>
 
 ==باندنۍ تړنې ==
-{{Commonscat|جلال آباد}}
+{{Commonscat|Jalalabad|جلال آباد}}
 *[http://www.zharov.com/dupree/chapter11.html د افغانستان تاريخي لارښود - جلال آباد]
 *[http://www.flickr.com/photos/kimberlytherese/421677505/in/set-72157594578147607/ د جلال آباد انځورونه]
 
@@ -45,8 +45,7 @@
 
 [[ar:جلال آباد]]
 [[ast:Jalalabad]]
-[[bn:জালালাবাদ]]
-[[bpy:জালালাবাদ]]
+
 [[cy:Jalalabad]]
 [[da:Jalalabad]]
 [[de:Dschalalabad]]
@@ -68,6 +67,6 @@
 [[pl:Dżalalabad (miasto w Afganistanie)]]
 [[pt:Jalalabad]]
 [[ro:Dschalalabad]]
-[[ru:Джалалабад]]
+[[ru:Джелалабад]]
 [[sv:Jalalabad]]
 [[zh:賈拉拉巴德 (阿富汗)]]
