The file [[:Image:Flag_of_the_African_Union.svg]] has been removed, as it has been deleted by [[:commons:User:MichaelMaggs]]: ''per [[commons:Commons:Deletion_requests/Images_from_webchantier.com]]''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/مراکش.mw
+++ b/مراکش.mw
@@ -246,7 +246,7 @@ Chaabi (''popular'') is a music consisting of numerous varieties which are desce
 * [[Image:Flag of the United Nations.svg|30px]] [[United Nations]] - since [[November 12]], [[1956]]
 * [[Image:Flag of the League of Arab States.svg|30px]] [[Arab League]] - since [[October 1]], [[1958]]
 * [[Image:Flag of the Olympic Movement.svg|40px]] [[International Olympic Committee]] - Since [[1959]]
-* [[Image:Flag of the African Union.svg|30px]] [[Organisation of African Unity]] -  a co-founder in [[May 25]], [[1963]]. Withdrew [[November 12]], [[1984]].
+*  [[Organisation of African Unity]] -  a co-founder in [[May 25]], [[1963]]. Withdrew [[November 12]], [[1984]].
 * [[Image:G77.jpg|30px]] [[Group of 77]] - since [[June 15]], [[1964]]
 * [[Image:Flag of OIC.svg|30px]] [[Organization of the Islamic Conference]] - since [[September 22]], [[1969]]
 * [[Image:Flag of AMU.svg|30px]] [[Arab Maghreb Union]] - since [[February 17]], [[1989]]
