--- a/مراکش.mw
+++ b/مراکش.mw
@@ -244,7 +244,7 @@ Chaabi (''popular'') is a music consisting of numerous varieties which are desce
 
 ==Affliations==
 * [[Image:Flag of the United Nations.svg|30px]] [[United Nations]] - since [[November 12]], [[1956]]
-* [[Image:Flag of the League of Arab States.svg|30px]] [[Arab League]] - since [[October 1]], [[1958]]
+*  [[Arab League]] - since [[October 1]], [[1958]]
 * [[Image:Flag of the Olympic Movement.svg|40px]] [[International Olympic Committee]] - Since [[1959]]
 *  [[Organisation of African Unity]] -  a co-founder in [[May 25]], [[1963]]. Withdrew [[November 12]], [[1984]].
 * [[Image:G77.jpg|30px]] [[Group of 77]] - since [[June 15]], [[1964]]
