--- a/جلالکوټ.mw
+++ b/جلالکوټ.mw
@@ -3,23 +3,23 @@
 :''د آزربایجان ښار لپاره, وګورئ [[جلیل اباد]].''
 
 
-جلال آباد د کنړ او کابل سیند په نښلونې څای کې پروت دی. جلال آباد د ننګرهار ولایت منڅي (مرکز) دی. دا ښار د یوې۹۰ کیلومتري لوی لاری په واسطه له کابل ښار سره نښلي. او د په همدې واټن سره په ختیځه برخه کې د ګاونډي هېواد له پېښورښار سره نښلي.
+جلالکوټ (جلال اباد)د کنړ او کابل سیند په نښلونې څای کې پروت دی. جلالکوټ د ننګرهار ولایت منڅي (مرکز) دی. دا ښار د یوې۹۰ کیلومتري لوی لاری په واسطه له کابل ښار سره نښلي. او د په همدې واټن سره په ختیځه برخه کې د ګاونډي هېواد له پېښورښار سره نښلي.
 
-دا رنګه جلال آباد د ختیځو سیمو ستر سوداګریز او ټولنیز منځۍ هم دی. 
+دا رنګه جلالکوټ د ختیځو سیمو ستر سوداګریز او ټولنیز منځۍ هم دی. 
 
 
 ==پېښلیک==
-د چین نامتو بودایی راهب [[هوان زانګ]] یا [[ژوان زانګ]][[Xuan Zang]] په لرغوني پیر کې کال ۶۳۰ ز د هډې ښار ته راغلې ؤ، او داسې یې وانګېرله چې هند ته راغلې دی.  
-د جلال آباد ښار د بنسټ ډبره درېیم مغول واکمن جلال الدین محمد اکبر په شپاړسمه زېږدي پېړۍ کې ایښې ده. 
+د چین نامتو بودایی راهب [[هوان زانګ]] یا [[ژوان زانګ]][[Xuan Zang]] په لرغوني پیر کې کال ۶۳۰ز د هډې ښار ته راغلې ؤ، او داسې یې وانګېرله چې هند ته راغلې دی.  
+د جلالکوټ ښار د بنسټ ډبره درېیم مغول واکمن جلال الدین محمد اکبر په شپاړسمه زېږدي پېړۍ کې ایښې ده. 
 
 دا ښار د انګرېزانو د تاړاک پر مهال د هغوی لاس ته ورغې، مګر د په دواړو یرغلونو کې له ماتې سره مخ شول. 
 د افغانستان خپلواکۍ ګټلو څخه وروسته لومړنۍ لویه جرګه په ۱۳۰۱ل، چې له ۱۹۲۰ز کال سره سمون خوري، په همدې ښار کې جوړه شوه. 
 
 
-[[سراج العمارت]], چې د امير حبيب الله خان او غازي امان الله خان د استوګنې ځای و په ۱۹۲۹ کال کې ړنګ شو. the other sanctuaries however, retain vestiges of the past and offer a peaceful afternoon's crunch. The [[mausoleum]] of both rulers is enclosed by a garden facing Seraj-ul-Emart.
+[[Seraj-ul-Emarat]], the residence of Amir [[Habibullah Khan|Habibullah]] and King [[Amanullah Shah|Amanullah]] was destroyed in [[1929]]; the other sanctuaries however, retain vestiges of the past and offer a peaceful afternoon's crunch. The [[mausoleum]] of both rulers is enclosed by a garden facing Seraj-ul-Emart.
 
 == Trivia ==
-* د جلال آباد يادونه د جګړې ډګر۲ يا [[Battlefield 2]] په نامه يو کمپيوټري لوبه کې هم شوې. په هماغه لوبه کې د جلال آباد لار په نامه يوه نخشه وېستل شوې.
+* Jalalabad is featured as a map on the [[PC game]] [[Battlefield 2]] as "Road to Jalalabad".
 
 == See also ==
 *[[افغانستان]]
@@ -27,46 +27,41 @@
 *[[ولایتي بیارغونې ټیم]]
 *[[نړیوال سوله ساتې څواک]]
 
-== سرچينې او پايڅوړونه ==
+== References and footnotes ==
 <div class="references-small">
 <references/>
 </div>
 
-==باندنۍ تړنې ==
-{{Commonscat|Jalalabad|جلال آباد}}
-*[http://www.zharov.com/dupree/chapter11.html د افغانستان تاريخي لارښود - جلال آباد]
-*[http://www.flickr.com/photos/kimberlytherese/421677505/in/set-72157594578147607/ د جلال آباد انځورونه]
+==بهرنې تړون ==
+{{Commonscat|جلالکوټ}}
+*[http://www.zharov.com/dupree/chapter11.html Historical Guide To Afghanistan - Jalalabad]
+*[http://www.flickr.com/photos/kimberlytherese/421677505/in/set-72157594578147607/ Images of Jalalabad|  د جلالکوټ انځورونه]
 
 {{د افغانستان لوی ښارونه}}
 
 {{Afghanistan-geo-stub}}
 
-[[وېشنيزه:د افغانستان ښارونه]]
+[[Category:د افغانستان ښارونه]]
 
 [[ar:جلال آباد]]
 [[ast:Jalalabad]]
-
-[[cy:Jalalabad]]
+[[bn:জালালাবাদ]]
 [[da:Jalalabad]]
 [[de:Dschalalabad]]
-[[en:Jalalabad]]
-[[es:Jalalabad]]
 [[et:Jalālābād]]
+[[es:Jalalabad]]
 [[fa:جلال‌آباد]]
-[[fi:Jalalabad]]
 [[fr:Jalalabad]]
-[[id:Jalalabad]]
-[[it:Jalalabad]]
-[[ja:ジャラーラーバード]]
 [[ko:잘랄라바드]]
+[[bpy:জালালাবাদ]]
 [[lt:Džalalabadas]]
-[[ms:Jalalabad]]
-
 [[nl:Jalalabad]]
+[[new:जलालाबाद]]
+[[ja:ジャラーラーバード]]
 [[no:Jalalabad]]
 [[pl:Dżalalabad (miasto w Afganistanie)]]
 [[pt:Jalalabad]]
-[[ro:Dschalalabad]]
-[[ru:Джелалабад]]
+[[ru:Джалалабад]]
+[[fi:Jalalabad]]
 [[sv:Jalalabad]]
-[[zh:賈拉拉巴德 (阿富汗)]]
+[[zh:賈拉拉巴德]]
