interwiki cleanup, were corrupted by possibly a vandal?

--- a/جلالکوټ.mw
+++ b/جلالکوټ.mw
@@ -33,7 +33,7 @@
 </div>
 
 ==بهرنې تړون ==
-{{Commonscat|جلالکوټ}}
+{{Commonscat|Jalalabad|جلالکوټ}}
 *[http://www.zharov.com/dupree/chapter11.html Historical Guide To Afghanistan - Jalalabad]
 *[http://www.flickr.com/photos/kimberlytherese/421677505/in/set-72157594578147607/ Images of Jalalabad|  د جلالکوټ انځورونه]
 
@@ -43,25 +43,29 @@
 
 [[Category:د افغانستان ښارونه]]
 
+
 [[ar:جلال آباد]]
 [[ast:Jalalabad]]
-[[bn:জালালাবাদ]]
+[[cy:Jalalabad]]
 [[da:Jalalabad]]
 [[de:Dschalalabad]]
 [[et:Jalālābād]]
+[[en:Jalalabad]]
 [[es:Jalalabad]]
 [[fa:جلال‌آباد]]
 [[fr:Jalalabad]]
 [[ko:잘랄라바드]]
-[[bpy:জালালাবাদ]]
+[[id:Jalalabad]]
+[[it:Jalalabad]]
 [[lt:Džalalabadas]]
-[[nl:Jalalabad]]
-[[new:जलालाबाद]]
+[[ms:Jalalabad]]
+[[nl:Dzjalalabad]]
 [[ja:ジャラーラーバード]]
 [[no:Jalalabad]]
 [[pl:Dżalalabad (miasto w Afganistanie)]]
 [[pt:Jalalabad]]
-[[ru:Джалалабад]]
+[[ro:Jalalabad]]
+[[ru:Джелалабад]]
 [[fi:Jalalabad]]
 [[sv:Jalalabad]]
-[[zh:賈拉拉巴德]]
+[[zh:賈拉拉巴德 (阿富汗)]]
