robot  Adding: [[ar:محمد نادر شاه]]

--- a/محمد_نادر_شاه.mw
+++ b/محمد_نادر_شاه.mw
@@ -26,6 +26,7 @@
 [[وېشنيزه:د افغانستان پاچايان]]
 [[وېشنيزه: پښتانه]]
 
+[[ar:محمد نادر شاه]]
 [[cy:Mohammed Nadir Shah]]
 [[de:Mohammed Nadir Schah]]
 [[en:Mohammed Nadir Shah]]
