The file [[:Image:Cameroon_coa.png]] has been replaced by [[:Image:Coat_of_arms_of_Cameroon.png]] by administrator [[:commons:User:ChristianBier]]: ''exact, or scaled-down duplicate''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/کامرون.mw
+++ b/کامرون.mw
@@ -2,7 +2,7 @@
 |اصلي نوم = '''Republic of Cameroon<br>République du Cameroun'''
 |عام نوم = Cameroon
 |بېرغ = Flag of Cameroon.svg
-|نښان = Cameroon coa.png
+|نښان =Coat_of_arms_of_Cameroon.png
 |نخشه = LocationCameroon.png
 |national_motto = Paix, Travail, Patrie<br>([[French language|French]]: Peace, Work, Fatherland)
 |ملي سرود = [[Chant de Ralliement]]
