--- a/بورکینافاسو.mw
+++ b/بورکینافاسو.mw
@@ -2,7 +2,7 @@
 اصلي نوم              = Burkina Faso |
 عام نوم              = Burkina Faso |
 بېرغ               = Flag of Burkina Faso.svg |
-نښان               = Burkinafaso coa.png |
+نښان               =Coat_of_arms_of_Burkina_Faso.png |
 national_motto           = Unité, Progrès, Justice ([[French language|French]]: Unity, Progress, Justice) |
 نخشه                = LocationBurkinaFaso.png |
 ملي سرود          = [[Une Seule Nuit]] (One Single Night) |
