*Empty MediaWiki Message*

--- a/مسيحيت.mw
+++ b/مسيحيت.mw
@@ -54,8 +54,7 @@
 يو بله طائفه ( ډله) بيا وايي چى  هر يو په خپل ذات ( ځان)  كى د يواله  ( څښتن) ده خو په هغه اندازه نه كوم  چى دڅښتنانو مجموعه ( ثالوث)  بلل كيږي ، بلكي  ترهغى كم دى . او د ( الله) څښتن اطلاق  پر دوي  دپراختيا له امله ايښودل شوى (3)
 دريمه ډله بيا وائى  :  دغه درى اقانيمه څښتن نشو بللى  اوڅښتن د دريو واړو له مجموعى  ( ثالوث)  څخه  عبارت  دى( 4)
 
-'''
-== په تثليت كى  د توحيد عقيده =='''
+== په تثليت كى  د توحيد عقيده ==
 دغو بى شميرو بيلا بيلو نظرويو  د تثليت  ( درى ګوني)  عقيدى  نه يو بوږنونكي خوب  ګرځولي  ، چي دلته به ددغى عقيدى تفسير وړاندي شي، خو هغه  څه چى ډيرو مسيحيانو ځانونوته غوره كړي او ښايي  ښه مقبوليت دوى ته ولرى ، هغه څه دي چي برطانوى دايرة المعارف كى راځي.
 د درى ګوني ( تثليت) مسيحى عقيدى ښه تعبيرپه لاندى ټكوسره كولى شو.
 پلار( آب) اله ده، زوى ( ابن) اله ده او مقدس روح هم اله ده خو دغه درى واړه بيا په مجموع كى درى اله ( دري څښتنه )  نه دى او صرف يو اله ده.
@@ -75,7 +74,9 @@
 او همداراز داګمان هم نه ده صحيح چى په مسيح مسيح باندى( اعتماد)  تر سره شى او بيا هغه خپلو دريو زده كونكو سره په غزه كى ولاړ وه او دريم جوړښت ورته د ( ته زما زوى ئى)  اواز وكړه.
 ...... دغه د پلار ويوكى( كلمه) وه چى خپل زوى ئى  پرى راوبله. او دپلار، زوى او مقدس روح سره ويشه سره نه منى، او  دوى سره د ويش نه منونكى پيښي غوندى كار  ترسره شوى، دغه زما عقيده ده ځكه دا يو كاتوليكى عقيده ده (2).
 نو اوس عيسايانو سره د درى ګونو يو والى نه د خلاصون لياره كومه  ده چى درى  نه يوجوړوي او پخوا لدى چى ددى سوال په ځواب پوه شو، لا زمه ده چى پلار، زوى او مقدس روح بايد وپيژندل شي؟
-'''پلار:'''
+
+
+== '''پلار:''' ==
 په عيسوى عقيده كى  دپلار نه مطلب هغه يو الهى ذات دى چى  د كلام ( خبرو) او د (حيات) ژوندون له صفتووتلى وى، او دا د زوى د پيدايښت  له (  Principal ) اساس اوتهداب ‘ګڼل كيږي ، د پلار دكلمى هغه تفسير چى مشهور مسيحى  فيلسوف (توماس اكو نياس) (St.Thomas Aquinas)كړي سم ندى كوم چى وائى :
 پلار يو څوك  زيږولى، او يوڅه وخت تير شوى وه چى پلار وه او زوى وجود نه درلود، او دا يو لاهوتى ( خدائى) اصطلاح  ده چى يو ازى دا معنى لرى چى پلار دى د زوى اساس وى لكه چى ذات  دڅښتن دصفاتوپيليزه او اساس  ده . او كه نه له كومى نه چى پلار ده زوى هم وه.
 د متي هغي قصي ته اشاره ده 17 : 5 د تجلى قصه.
@@ -86,7 +87,8 @@ Basic writing of St. Augstine, Trans by: A.W. Haddan & edited by Whitney, Newyor
 ليكى:
 لاندى خبرى نه مطلب  ځينو حقايقو ته د انسان نظر اړول دى،او لومړي اشاره دى ته ده چى  ټول مخلوقات په خپل  پيدايښت  كى څښتن ته ضرورت لرى، لكه چى  زوى پلار ته ضرورت لرى.
 دوهم : دى كى دا دلالت پروت دى چى الله په خپلو بندګانو  داسى مهربانه وه لكه چى  پلار په خپلو زامنو(2)
-زوى
+
+== '''زوى''' ==
 زوى نه د عيسوى مذهب مراد دخداى د خبرو صفت ده (  Word of God) كومى خبرى چى د انسانانو د خبرو په رنګي نه وى ، د خداى او د بنده د خبرو تر منځ يو لوى توپير پروت دى كوم چى " اكويناس" ئى بيا نوى:
 په انسانى فطرت د خبرو صفت كي  كوم جوهرى ( اصل)  وجود نه لرى او همدا وجه ده چى دى ته  مونږ د انسان زوى يا د انسان  ماشوم نه شو ويلى خو د خداى دخبرو صفت يو جوهرى صفت دى چى په اصل كى ځان  ته وجود لرى، نوځكه په مجازي توګه  (زوى) بلل كيږي  اوهر څه چى پليزه او اساس ده هغه ( پلار)  ده .(3)
 د عيسوى عقيدى په مطابق د خداى نه چى كومه اندازه معلومات لاس ته راځي ټول دهمدغه صفت په ذريعه سرته رسيږي او د همدغه صفت نه ټول څيزونه پيداكيږي او دغه صفت د
