*Empty MediaWiki Message*

--- a/متل.mw
+++ b/متل.mw
@@ -344,4 +344,184 @@
 
 
 
-ژباړونکی : محمدکریم نور
+
+خپل پلونه مه سوزوئ ، کېدای شي چې چې تاسې ګټه ترې واخلئ . 
+
+
+پوهه به د لوړې پوړۍ ته اوچت کړي، خو ساتل یې یوازې شخصیت کولای شي . 
+
+اړین نصیحت څوک ډېر پام نه کوي . 
+
+د ښځې ځای په کور کې دی . 
+
+ټولې پېشوګانې غواړي چې کبان ونیسي، خو د پنجو لمدول یې نه خوښېږي .
+
+ټول ګلان په یوه باغ کې نه وي . 
+
+زوړ سپی نوي چلونه نه شي زده کولای . 
+
+که پوښتنه ونه کړې، زه به هم دروغ نه وایم . 
+
+وسپنه وسپنه تېروي، انسان انسان . 
+
+څنګه چې ماشوم پیدا شي، همداسې یوه ورځ مرګ ته نږدې شي .  
+
+له هره ګامه وړاندې پام کوه . 
+
+بد خبر ژر راځي . 
+
+سپی لکه چې غاپي هغسې خوړل نه کوي . 
+
+مخکې له نیوکې ځان د هغه سړي پر ځای فرض کړه . 
+
+هم خیرات خوري، هم د خوښولو حق غواړي! 
+
+ښه دی چې درسره وي، که څه هم چې ورته اړ نه یاست، خو بده ده چې نه وي، او ورته اړ یاست . 
+
+ترخه درمل کېدای شي چې ښه اغېزه ولري . 
+
+ګران شی وپېرئ چې یوازې یو ځل وژاړئ . 
+
+د انسان په کرامت پوه شئ . 
+
+له ډېرو ونو څخه ځنګل نه لیدل کېږي (مانا : سړی له ډېرې سپړنې یا تشرېح اصل شی نه ویني ) . 
+
+درنښت ګران نه دی، هر سړی دروند سړی کېدای شي . 
+
+سختي (بد وخت) سختې هلې ځلې غواړي . 
+
+هغه لاس مه وهه چې ډوډۍ درکوي . 
+
+چرګوړي وشمېره، هګۍ نه . 
+
+چا چې آس په هدیه درکړ، غاښ یې مه ګوره  چې څو کلن دی . 
+
+څه شی چې مات نه وي، د جوړولو هڅه یې مه کوه . 
+
+ټولې هګۍ په یوه ټوکرۍ کې مه اېږدئ . (یوه شي ته ډېر مه په تمه کېږئ، دویم پلان هم جوړ کړئ) .
+
+تر څو چې ټکه (ناورین) نه وي رالوېدلې، غم مه کوه . 
+
+			هر څوک غواړي چې جنت ته ولاړ شي، خو هیڅوک نه غواړي چې مړه شي . 
+
+ان خرابه (ولاړه) ګړۍ د ورځې دوه ځلې وخت سم ښیي . 
+
+
+پوهه د خپلې ناپوهۍ پیداکول دي . 
+
+پوهه ماشینونه جوړوي چې د انسان په څېر کار کوي، او انسان پیدا کوي چې د ماشین په توګه کار کوي . 
+
+هر ګل اغزی لري . 
+
+هر څه په خپل وخت . 
+
+ماته د بریا لپاره د ګام تېږه ده . 
+
+لوېدل د ماتې څرګندویي نه کوي، بلکې همداسې لویدلی پاتې کېدل ماته ده . 
+
+ښې بڼکې ښه مرغان جوړوي . 
+
+چې لمړی راشې، لمړی به د خدمت وشي . 
+
+لمړۍ کار لمړی کوئ . 
+
+که مې یو ځل وغولوې، پر تا د شرم وي، که مې دوه ځلې وغولوي، پر ما د شرم وي .  
+
+کم سوله (بې عقل) هلته بېړه کوي چېرته چې ملایکي له تګه ډارېږي . 
+
+چې په مخکې ورته ګواښ شوی وي، مخکې یې زغره اغوستې وي .
+
+بخت د زړور په ګټه وي . 
+
+تر ټولو ښه خیرات د پوهې ورکړه ده . 
+
+د ټوپک جګړې ته له چاړې سره مه راځئ . 
+
+روغتیا خدای درکوي، خو فیس ډاکتر درڅخه اخلي . 
+
+لویه ونه له کوشني نیالګي څخه جوړېږي . 
+
+درناوی کوئ چې درناوی مو وشي . 
+
+ښه مېرمن ښه ژوند دی . 
+
+سخت کار هېڅ وخت هډوکي نه ماتوي . 
+
+غیرتي کسان به د لوبي وړونکي وي . 
+
+بیړه د وخت ضایع ده . 
+
+څوک چې په تیارۍ کې ناکام شي، نو ناکامۍ ته به ډېره ښه تیار شي . 
+
+روغتیا له روپیو ښه ده . 
+
+
+څوک چې په خپل تاریخ نه پوهېږي، نو هغه سهوې به بیا تکرار کړي .
+
+څوک چې پوهېږي، هغه خبرې نه کوي، خو څوک چې خبري کوي، هغه نه پوهېږي .
+
+څوک چې ډېر په بیړه ژوند کوي، هغه به ډېر ژر مړیستون (قبر) ته ورسېږي . 
+
+څوک چې د هېڅ شي لپاره نه ولاړېږي، د هر شي لپاره به ولوېږي .  
+
+څوک چې هکۍ غلا کوي، غویی به هم غلا کړي . 
+
+چې له تورې سره ژوند کوي، له تورې سره به مړ شي . 
+
+چې ډېر خوب کوي، خپله لوږه به هم هېره کړي . 
+
+څوک چې د وینګ (ویلو) لپاره څه نه لري، نو لیکل هم نه شي کولای . 
+
+غپل یې له داړلو څخه بد دي . 
+
+تاریخ تکرارېږي . 
+
+یوازې خبري کوي، خو کړن یې نشته . 
+
+کور هلته دی چې زړه مو وي . 
+
+کور ، کور دی، که څه هم چې ښه نه وي . 
+
+ریښتینولي تر ټولو ښه تګلاره ده . 
+
+د ښو په هیله اوسئ، خو د بدو لپاره تیاري ولرئ . 
+
+د شنې زرغونې (رنګین کمان) لپاره لمر او باران دواړه اړین دي . 
+
+په پښو ولاړ مرګ ښه دی، نظر هغه ژوند ته چې په ګونډو وي . 
+
+بېګاره او مضر لاسونه د شیطان اسباب دی . 
+
+که دنده د کړن ارزښت لري، نو په ښه توګه د وکړل شي . 
+
+که هیلې آسونه وای، نو سوالګر  به پرې  الوتلی .
+
+که څوک نه شئ وهلئ، یا ورسره ملګري شئ، یا یې په بل چا ووهئ . 
+
+که د کوم کار په کړن کې ماهر نه یاست، نو پام کوئ . 
+
+چې د لوګي زغم نه لرئ، نو له پخلنځي ووځئ . 
+
+که د لاترې ټیکت نه پېرئ، نو څنګه به یې وګټئ؟
+
+که د موخه نه پېژنې، نو هر ګاډی به د هلته ورسوي . 
+
+
+که د سهار چای په تخت کې چښې، نو په پخلنځي کې څمله . 
+
+د یوه چا د شخصیت د مالومولو لپاره هغه ته واک او ځواګ ورکړه . 
+
+که په یوه شخړه کې د حل برخه نه یاست، نو هرو مرو د ستونزې برخه یاست . 
+
+حل د ستونزو په منځ کې دی . 
+
+لېونی یو کار څو وارې کوي، خو تمه یې د مختلفو پایلو وي . 
+
+له سهاره مخکې تل تپه تیاره وي . 
+
+په خپله هدیه مهمه نه ده، بلکې د ورکولو طریقه یې مهمه ده .
+
+د دروغو لپاره دوه کسان اړین دي : یو کس چې دروغ ووایي، بل چې غوږ ورته ونیسي . 
+
+ 
+ژباړه محمد کریم، نور
