--- a/ساباوري.mw
+++ b/ساباوري.mw
@@ -46,7 +46,7 @@ It is not surprising to find that many peoples respect and even worship animals 
 With the rise of [[species]], [[deities]] and the cult of individual animals, the path towards [[anthropomorphism]] and [[polytheism]] is opened and the respect paid to animals tended to be reduced or lost entirely, especially in its strict animistic characters.<ref name="brit"/>
 
 ==Diversity==
-{{cite-section|date=December 2006}}
+{{cite-section|date=December 2006}}--[[ځانګړی:ونډې/69.24.167.54|69.24.167.54]] 03:23, 1 ډيسمبر 2008 (UTC)--[[ځانګړی:ونډې/69.24.167.54|69.24.167.54]] 03:23, 1 ډيسمبر 2008 (UTC)--[[ځانګړی:ونډې/69.24.167.54|69.24.167.54]] 03:23, 1 ډيسمبر 2008 (UTC)
 
 Today Animists live in significant numbers in countries such as [[Zambia]], the [[Democratic Republic of the Congo]], [[Bangladesh]], [[India]], [[Gabon]], the [[Republic of Guinea Bissau]], [[Indonesia]], [[Japan]], [[Laos]], [[Myanmar]], [[Papua New Guinea]], [[Peru]], the [[Philippines]], [[Canada]], [[Russia]], [[Sweden]], [[Thailand]], [[Timor Leste]], and the [[United States]].
 
