*Empty MediaWiki Message*

--- a/سردار_محمد_داود_خان.mw
+++ b/سردار_محمد_داود_خان.mw
@@ -150,6 +150,7 @@ His death was not publicly announced after the coup. Instead, the new government
 [[no:Mohammed Daoud Khan]]
 [[pl:Muhammad Daud Chan]]
 [[ru:Мухаммед Дауд]]
+[[tr:Muhammed Davud Han]]
 [[uk:Мухаммед Дауд Хан]]
 [[ur:سردار داؤد خان]]
 [[zh:穆罕默德·達烏德·可汗]]
