The file [[:Image:Grb.gif]] has been removed, as it has been deleted by [[:commons:User:Micheletb]]: ''(incorrectly named) duplicate of [[commons::Image:Coat of arms of the Republic of Macedonia.gif]]''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/شمالي_مقدونیه.mw
+++ b/شمالي_مقدونیه.mw
@@ -2,7 +2,7 @@
 |اصلي نوم = Република Македонија<br>Republic of Macedonia 
 |عام نوم = the Republic of Macedonia
 |بېرغ = Flag of Macedonia.svg
-|نښان = Grb.gif
+|نښان =
 |نخشه = LocationMacedonia.png
 |national_motto = 
 |national_anthem = [[Today Over Macedonia]] ([[Macedonian language|Macedonian]]: Денес Над Македонија, Denes Nad Makedonija)
