*Empty MediaWiki Message*

--- a/اخوان_المسلمون.mw
+++ b/اخوان_المسلمون.mw
@@ -2,7 +2,7 @@
 !colspan="2" style="background:#008000;color:#FFFFFF"|'''اخوان المسلمون'''
 <small>د اخوان المسلمون اسلامی غورځنګ</small>
 |-
-|colspan="2"|[[Image:Ikhwan logo.gif|thumb|400px| د اخوان المسلمون نښان]]
+|colspan="2"|[[Image:Muslim_Brotherhood_Emblem.jpg|thumb|400px| د اخوان المسلمون نښان]]
 |-
 |مشر||[[...]]<br />[[...]]
 |-
