--- a/کینیا.mw
+++ b/کینیا.mw
@@ -3,7 +3,7 @@
 conventional_long_name = Republic of Kenya |
 عام نوم = Kenya |
 بېرغ = Flag of Kenya.svg |
-نښان = Kenya coa.png |
+نښان =Coat_of_arms_of_Kenya.png |
 national_motto = [[Harambee]] ([[Swahili]]: Let us all pull together) |
 نخشه = LocationKenya.png |
 ملي سرود = [[Ee Mungu Nguvu Yetu]] (Oh God of All Creation) |
