--- a/سورینام.mw
+++ b/سورینام.mw
@@ -203,6 +203,7 @@ Due to the mix of population groups, the Surinamese culture is very diverse.
 [[diq:Surinam]]
 [[dsb:Surinam]]
 [[dv:ސުރިނާމް]]
+[[ee:Suriname]]
 [[el:Σουρινάμ]]
 [[en:Suriname]]
 [[eo:Surinamo]]
