robot  Adding: [[dsb:Senegal]]

--- a/سنګال.mw
+++ b/سنګال.mw
@@ -251,6 +251,7 @@ Arrondissements: see [[Arrondissements of Senegal]]
 [[da:Senegal]]
 [[de:Senegal]]
 [[diq:Senegal]]
+[[dsb:Senegal]]
 [[dv:ސެނެގާލް]]
 [[ee:Senegal]]
 [[el:Σενεγάλη]]
