The file [[:Image:PICT0001.JPG]] has been replaced by [[:Image:Quena01.jpg]] by administrator [[:commons:User:D-Kuru]]: ''duplicate file''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/پیرو.mw
+++ b/پیرو.mw
@@ -523,7 +523,7 @@ At the present time, different musical expressions ([[dance]]s and [[song]]s), f
 
 ===Music===
 {{main|Music of Peru}}
-[[Image:PICT0001.JPG|thumb|150px|left|The ''Quena'', a Peruvian wind instrument typical of Andean music]]
+[[Image:Quena01.jpg|thumb|150px|left|The ''Quena'', a Peruvian wind instrument typical of Andean music]]
 Like its geography (28 of 32 world climates), its cuisine and its various ethnicities, Peruvian music is very diverse. Much of Peru's music is derived from [[Andean]], Andalusian [[Spain|Spanish]] and  [[African]] roots. Modern Peruvian music and Amazon influenced music is also common in Peru.
 
 The Pre-Hispanic Andean musicians mostly used [[wind instrument]]s such as the [[quena]], the [[pinkillo]], the [[erke]], the [[Siku (panpipe)|antara]] or [[Siku (panpipe)|siku]] (also called [[panpipe|zampoña]]), the [[pututo]] or [[pututo|pototo]], etc. They also used diverse [[Membranophone|membranophone instruments]] such as the [[tinya]] (hand drum), the [[wankar]], instrument of big dimensions, the [[pomatinya]]s - made of [[puma]]'s skin-, and the [[runatinya]]s - made of human's skin-. The [[runatinya]] was also used in battles.
