--- a/سيد_محمد_حسين_طباطبايي.mw
+++ b/سيد_محمد_حسين_طباطبايي.mw
@@ -43,11 +43,11 @@
 *رساله انسان قبل از دنیا، در دنیا و بعد از دنیا:
 این کتاب که اکنون با نام «انسان از آغاز تا انجام» ترجمه شده‌است مباحثی مفید از عوالم سه گانه ماده، مثال و عقل مطرح کرده و پیرامون شبهات و دغدغه خاطر جوانان مطالبی بسیار مفید و لازم ارائه کرده‌است.
 
-== شاگردان ==
+== زده کوونکي==
 
-مقالهٔ اصلی: [[شاگردان علامه طباطبایی]]
+علامه طباطبايي په درځنونو زده کوونکي لري، چې زیاتره یې د ایران انقلابي اخودان جوړوي. 
+د نامتو زده کوونکو نومونه یې په لاندې توګه دی:
 
-قابل توجه‌است بخش بزرگی از رهبران روحانی انقلاب ایران شاگردان مشترک سیدمحمدحسین طباطبایی و [[روح الله خمینی]] هستند.  علامه شاگردان زیادی تربیت کرد، که در زیر نام مهم‌ترین آنها ذکر می‌گردد:
 #[[امام موسی صدر]]
 #[[مرتضی مطهری]]
 #[[سید محمد حسینی بهشتی]]
@@ -84,7 +84,7 @@
 #[[سیدابراهیم خسروشاهی]]
 #[[سید محمد خامنه‌ای]]
 
-همچنین بسیاری از روشنفکران در جلسات مباحثه از ایشان بهره گرفتند. از آن جمله می‌توان به جلسات مباحثه با پرفسور [[هانری کربن]] اشاره کرد، که دکتر سید [[حسین نصر]] و بسیاری دیگر در آن حضور داشتند و یا جلساتی که در تهران برگزار می‌شد و افرادی نظیر [[داریوش شایگان]] در آن حاضر بودند.
+دارنګه یې په دېرو علمي غونډو کې ګډونونه کړي، چې نامتو ختیځپوه هنری کورباان سره یې هم ښې مباحثې کړی.
 
 ==نمونه اشعار==
 
