--- a/سيد_محمد_حسين_طباطبايي.mw
+++ b/سيد_محمد_حسين_طباطبايي.mw
@@ -124,19 +124,19 @@
 * [[عرفان اسلامی]]
 * [[تفاسیر قرآن]]
 
-== پیوندهای بیرونی ==
+== بهرنۍ تړنې ==
 * [http://www.sharghnewspaper.com/840823/html/v1.htm ویژه‌نامهٔ روزنامهٔ شرق]
 * [http://www2.hamshahri.net/vijenam/Kherad/1384/840825/index.htm خِرَدنامهٔ همشهری]
 * [http://mehrnews.com/fa/NewsDetail.aspx?NewsID=129412 ویژه‌نامهٔ خبرگزاری مهر]
 * [http://www.maarefislam.com/doreholomvamaarefislam/booksindex/mehretaban.htm کتاب مهر تابان]
-* [http://www.ghadeer.org/site/thekr/tafsir/t_almizan/almizan.html متن کامل ترجمهٔ تفسیر المیزان در پایگاه اینترنتی غدیر]، [http://quran.al-shia.com/fa/id/2 در پایگاه اینترنتی الشیعه]
-* [http://www.tiknews.org/display/?ID=32001 زلال اندیشه‌ها و منش علامه طباطبایی در بيان مرحوم آيت‌الله صائنی زنجانی]
-* [http://daneshnameh.roshd.ir/mavara/mavara-index.php?page=%d8%b9%d9%84%d8%a7%d9%85%d9%87+%d8%b7%d8%a8%d8%a7%d8%b7%d8%a8%d8%a7%db%8c%db%8c&SSOReturnPage=Check&Rand=0 علامه طباطبایی]، [[دانشنامه رشد | دانشنامهٔ رشد]] 
+* [http://www.ghadeer.org/site/thekr/tafsir/t_almizan/almizan.html د تفسیر المیزان بشپړ مت د غدیر په ګورتپاڼه کې]، [http://quran.al-shia.com/fa/id/2 د الشیعه په ګورتپاڼه کې]
+* [http://www.tiknews.org/display/?ID=32001 زلال اندیشه‌ها و منش علامه طباطبایی د مرحوم آيت‌الله صائنی زنجانی په بیان کې]
+* [http://daneshnameh.roshd.ir/mavara/mavara-index.php?page=%d8%b9%d9%84%d8%a7%d9%85%d9%87+%d8%b7%d8%a8%d8%a7%d8%b7%d8%a8%d8%a7%db%8c%db%8c&SSOReturnPage=Check&Rand=0 علامه طباطبایی]، [[د رشد پوهندغونډ | د ابن رشد پوهنغونډ]] 
 
-[[رده:علامه طباطبایی]]
-[[رده:زادگان ۱۲۸۱|طباطبایی، سید محمدحسین]]
-[[رده:درگذشتگان ۱۳۶۰|طباطبایی، سید محمدحسین]]
-[[رده:اهالی تبریز]]
+[[category:علامه طباطبایی]]
+[[category:زوکړي ۱۲۸۱|طباطبایی، سید محمدحسین]]
+[[category:د ۱۳۶۰ مړینې|طباطبایی، سید محمدحسین]]
+[[category:اد تبریز اوسېدونکي]]
 
 [[ar:محمد حسين الطباطبائي]]
 [[de:Allameh Tabatabai]]
