--- a/سيد_محمد_حسين_طباطبايي.mw
+++ b/سيد_محمد_حسين_طباطبايي.mw
@@ -129,7 +129,11 @@
 * [http://www.tiknews.org/display/?ID=32001 زلال اندیشه‌ها و منش علامه طباطبایی د مرحوم آيت‌الله صائنی زنجانی په بیان کې]
 * [http://daneshnameh.roshd.ir/mavara/mavara-index.php?page=%d8%b9%d9%84%d8%a7%d9%85%d9%87+%d8%b7%d8%a8%d8%a7%d8%b7%d8%a8%d8%a7%db%8c%db%8c&SSOReturnPage=Check&Rand=0 علامه طباطبایی]، [[د رشد پوهندغونډ | د ابن رشد پوهنغونډ]] 
 
-[[category:علامه طباطبایی]]
+[[category:فلسفه]]
+[[category:مسلمان فیلسوفان]]
+[[category:ختیځ فیلسوفان]]
+[[category:ایراني فیلسوفان]]
+[[category:شیعه فیلسوفان]]
 [[category:زوکړي ۱۲۸۱|طباطبایی، سید محمدحسین]]
 [[category:د ۱۳۶۰ مړینې|طباطبایی، سید محمدحسین]]
 [[category:اد تبریز اوسېدونکي]]
