/* تألیفات او آثار */

--- a/سيد_محمد_حسين_طباطبايي.mw
+++ b/سيد_محمد_حسين_طباطبايي.mw
@@ -21,12 +21,10 @@
 
 
 =====مشهورې لیکنې یې =====
-علامه طباطبایي دوه عمده لیکلي اثار لری، چې یو یې په عربی ژبه د [[تفسیر المیزان]] په نامه تفسیر دۍ، چې د ۷۰ کلونو په موده کې یې په ۷۰ ټوکونو کې لیکلې. دا تفسیر [[تفسیر قران بالقرآن]] دی، یانې د قرآن تفسیر په قرآن کریم سره شوې. 
+علامه طباطبایي دوه عمده لیکلي اثار لری، چې یو یې په عربی ژبه د [[تفسیر المیزان]] په نامه تفسیر دۍ، چې د ۷۰ کلونو په موده کې یې په ۲۰ ټوکونو کې لیکلې. دا تفسیر [[تفسیر قران بالقرآن]] دی، یانې د قرآن تفسیر په قرآن کریم سره شوې. 
+د طباطبایي دا اثر د د سید محمد باقر موسوي همداني لخوا په فارسي (ایراني) ژبه ژباړل شوې.
 
-و علاوه‌بر تفسیر آیات و بحث‌های لغوی در بخش‌هایی جداگانه با توجه به موضوع آیات مباحث روایی، تاریخی، کلامی، فلسفی و اجتماعی نیز دارد. این اثر به دو شکل منتشر شده‌است: نخست در چهل جلد، و سپس، در ۲۰ جلد. این اثر توسط سیدمحمد باقر موسوی همدانی به [[زبان فارسی]] ترجمه شده‌است.
-
-اثر مهم دیگر او [[اصول فلسفه و روش رئالیسم]] است. این کتاب شامل ۱۴ مقالهٔ فلسفی است، که طی دهه‌های ۲۰ و ۳۰ شمسی تالیف شده و توسط [[مرتضی مطهری]] و با رویکرد [[فلسفه تطبیقی | فلسفهٔ تطبیقی]] شرح داده شده‌است.<ref>[http://www.hawzah.net/Per/K/Ossol/Index.htm  اصول فلسفه و روش ره‏آلیسم، مرتضی مطهری]</ref>
-این کتاب نخستین، و یکی از مهم‌ترین کتاب‌هایی است که به بررسی مباحث فلسفی، با توجه به رویکردهای حکمت فلسفی اسلامی و فلسفهٔ جدید غربی پرداخته‌است.
+بل مهم اثر یې د [[اصول فلسفه و روش رئالیسم]] په نامه دی.دا کتاب ۱۴ فلسفي لیکنې لري،  چې په ۲۰مو او ۳۰مو لسیزو کې یې لیکلې دی، او [[مرتضی مطهری]] لخوا پرې د [[تطبیقي فلسفه | تطبیقي فلسفه]] په پل یې پرې لمنلیکونه او شرحه لیکې .<ref>[http://www.hawzah.net/Per/K/Ossol/Index.htm  اصول فلسفه و روش ره‏آلیسم، مرتضی مطهری]</ref>
 
 ==== شرحی کوتاه بر دیگر آثار ====
 
