--- a/سيد_محمد_حسين_طباطبايي.mw
+++ b/سيد_محمد_حسين_طباطبايي.mw
@@ -84,9 +84,7 @@
 
 دارنګه یې په دېرو علمي غونډو کې ګډونونه کړي، چې نامتو ختیځپوه هنری کورباان سره یې هم ښې مباحثې کړی.
 
-==نمونه اشعار==
-
-مقالهٔ اصلی: [[اشعار علامه طباطبایی]]
+==د شعر نمونه یې==
 
 {{شعر}}
 {{ب|همی گویم و گفته‌ام بارها | بود کیش من مهر دلدارها}}
@@ -111,7 +109,7 @@
 {{ب|به اندوه آینده خود را مباز | که آینده خوابی‌ست چون پارها}} 
 {{ب|فریب جهان را مخور زینهار | که در پای این گل بود خارها}} 
 {{ب|پیاپی بکش جام و سرگرم باش | بهل گر بگیرند بیکارها}}
-{{پایان شعر}}
+{{د شعر پای}}
 
 == پانویس ==
 <References />
