--- a/وحدة_الوجود.mw
+++ b/وحدة_الوجود.mw
@@ -1,6 +1,9 @@
-
 '''انسان''' چې د خپل فکري يون کوم یادونه کړې، له هغې څخه په روښانه توګه مالومېږي، چې دې (انسان) تل د [یووالي] په لور یون کړې، او همدا یووالې (وحدت) دده موخه ده. ده تل په ډول، ډول تجلیانو کې د (یو) لټه کړې. 
 
 انسان ددې نړۍ انواع و اقسامو شیان او ډول، ډول محسوساتو ته خو په ښکاره داسې ګوي چې دا په رنګ، جوړښت او ځانګړتیاوو کې سره بېل، بېل دی، مګر کله چې یې له یوې بلې زوایې څخه نظر وکړ، نو یو څیز په بل باندې اغیز اچوونکې، مشابه او مربوط په نظر راغې.
+
+
+ددې اریانوونکي نظم و ضبط په لیدو سره دې پایلې ته ورسېد، چې د اشیاو انفرادي او ذاتي وجود استحکام تصور له یو وهم څخه نور څه نه د، او دا موجودات یواځې د یوې لمحې رڼا ده، .... همدا د یووالي (وحدت) کشش دی، چې بالاخره دا موجودات لومړنۍ سرچینې، د وجود لامل یا د مادی لومړني صورت اړخ ته راکاږل، او ددې کوښښ یواځې مادي وجود پیدا کولو پورې محدود نه دی، بلکه دا د تصوف په علومو کې (چې لارې ګودرې یې ډېرې ستونزمنې او صبرغوښتونکي دی) لاس و خپې وهل پیل کړل، او له خپل کوښښ څخه دې پایلې ته ورسېد، چې دده جزیي او متفرق مالومات د یو [وحدت] او [کلیت] غوښتنه کوي.
+
 
 وحدة الوجود
