*Empty MediaWiki Message*

--- a/وحدة_الوجود.mw
+++ b/وحدة_الوجود.mw
@@ -7,3 +7,10 @@
 
 
 وحدة الوجود
+ 
+[[category:فلسفه]]
+[[category:تصوف]]
+[[category:اسلامي فلسفه]]
+[[category:ختیځه فلسفه]]
+[[category:اسلامي تصوف]]
+[[category:وحدة الوجود لارویان]]
