--- a/ترکمنستان.mw
+++ b/ترکمنستان.mw
@@ -158,7 +158,7 @@ Education is universal and mandatory through the secondary level, the total dura
 [[an:Turkmenistán]]
 [[ar:تركمانستان]]
 [[az:Türkmənistan]]
-[[bat-smg:Torkmėnistans]]
+[[bat-smg:Torkmienėstans]]
 [[be:Туркменістан]]
 [[be-x-old:Туркмэністан]]
 [[bg:Туркменистан]]
@@ -169,7 +169,7 @@ Education is universal and mandatory through the secondary level, the total dura
 [[ca:Turkmenistan]]
 [[ceb:Turkmenistan]]
 [[cs:Turkmenistán]]
-[[csb:Turkmenjistan]]
+[[csb:Turkmenistan]]
 [[cy:Turkmenistan]]
 [[da:Turkmenistan]]
 [[de:Turkmenistan]]
@@ -190,12 +190,13 @@ Education is universal and mandatory through the secondary level, the total dura
 [[gd:Turcmanastàn]]
 [[gl:Turcomenistán - Türkmenostan]]
 [[gv:Yn Turkmenistaan]]
+[[hak:Thú-khû-man-sṳ̂-thán]]
 [[he:טורקמניסטן]]
 [[hr:Turkmenistan]]
 [[hsb:Turkmenistan]]
 [[ht:Tirkmenistan]]
 [[hu:Türkmenisztán]]
-[[hy:Թուրքմենիստան]]
+[[hy:Թուրքմենստան]]
 [[id:Turkmenistan]]
 [[ie:Turkmenistan]]
 [[ilo:Turkmenistan]]
@@ -209,6 +210,7 @@ Education is universal and mandatory through the secondary level, the total dura
 [[ko:투르크메니스탄]]
 [[ks:तुर्कमिनिस्थान]]
 [[ku:Turkmenistan]]
+[[kv:Туркменистан]]
 [[kw:Pow Turkmen]]
 [[ky:Түркмөнстан]]
 [[la:Turcomannia]]
@@ -216,6 +218,7 @@ Education is universal and mandatory through the secondary level, the total dura
 [[lij:Turkmenistan]]
 [[lt:Turkmėnija]]
 [[lv:Turkmenistāna]]
+[[ml:തുര്‍ക്‌മെനിസ്ഥാന്‍]]
 [[ms:Turkmenistan]]
 [[nah:Turcmentlālpan]]
 [[nds:Turkmenistan]]
@@ -231,6 +234,7 @@ Education is universal and mandatory through the secondary level, the total dura
 [[pt:Turquemenistão]]
 [[qu:Turkminsuyu]]
 [[ro:Turkmenistan]]
+[[roa-rup:Turcmenistan]]
 [[ru:Туркмения]]
 [[sa:तुर्कमिनिस्थान]]
 [[scn:Turkmenistan]]
@@ -243,6 +247,7 @@ Education is universal and mandatory through the secondary level, the total dura
 [[sr:Туркменистан]]
 [[sv:Turkmenistan]]
 [[sw:Turkmenistan]]
+[[szl:Turkmyńistan]]
 [[ta:துருக்மெனிஸ்தான்]]
 [[tg:Туркманистон]]
 [[th:ประเทศเติร์กเมนิสถาน]]
